--- a/Lab 2/Lab-2-Daniel-Mehta.ipynb
+++ b/Lab 2/Lab-2-Daniel-Mehta.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a92381cc-b025-427f-bbae-6226fd78d386",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "72197c3e-cf87-4aab-8213-746c9898fad3",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "14.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,9 +50,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a96cb1d-2f8e-4ba5-b996-d86c75fd4be2",
+   "metadata": {},
+   "source": [
+    "Question 2: Compute the distance between the two points a=(1,2,3) and b=(-1,-1,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "89c8ebd8-adc2-4d06-9bd0-7cd2c31a3bc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.69041575982343"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = np.array([1,2,3])\n",
+    "p2 = np.array([-1,-1,0])\n",
+    "\n",
+    "dist = np.linalg.norm(p1-p2)\n",
+    "dist"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97b1b50f-4ba3-447a-8082-865d9be7052c",
+   "id": "218d76bc-42ef-49fc-9a06-80c998af3a39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfde6bbc-a25e-4945-a948-f6cefadb7f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e6e70e5-a337-4343-980e-d0e7c89cf07b",
    "metadata": {},
    "outputs": [],
    "source": []
