--- a/Lab 2/Lab-2-Daniel-Mehta.ipynb
+++ b/Lab 2/Lab-2-Daniel-Mehta.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "89c8ebd8-adc2-4d06-9bd0-7cd2c31a3bc5",
    "metadata": {},
    "outputs": [
@@ -69,23 +69,69 @@
        "4.69041575982343"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1 = np.array([1,2,3])\n",
-    "p2 = np.array([-1,-1,0])\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.array([-1,-1,0])\n",
     "\n",
-    "dist = np.linalg.norm(p1-p2)\n",
+    "dist = np.linalg.norm(a-b)\n",
     "dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f185fccf-7662-4ccf-8721-57b6441d458e",
+   "metadata": {},
+   "source": [
+    "Question 3: Compute the angle between the two vectors v=(1,2) and w=(-1,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bfde6bbc-a25e-4945-a948-f6cefadb7f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot Product: -3\n",
+      "Angle: 161.565051177078\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([1,2])\n",
+    "w = np.array([-1,-1])\n",
+    "\n",
+    "#Calcs the dot product of vectors\n",
+    "dot_product = np.sum(v * w) \n",
+    "\n",
+    "#Clacs the magnitude\n",
+    "magnitude_v = np.linalg.norm(v)\n",
+    "magnitude_w = np.linalg.norm(w)\n",
+    "\n",
+    "#Calcs the cosine \n",
+    "cos = dot_product / (magnitude_v * magnitude_w)\n",
+    "\n",
+    "#Uses arccos to find the angle in radians then convert to degrees\n",
+    "angle_radians = np.arccos(cos)\n",
+    "angle_degrees = np.degrees(angle_radians)\n",
+    "\n",
+    "\n",
+    "print(f\"Dot Product: {dot_product}\")\n",
+    "print(f\"Angle: {angle_degrees}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218d76bc-42ef-49fc-9a06-80c998af3a39",
+   "id": "beeced72-37d6-4b6a-b636-44cf16aabbae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,15 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfde6bbc-a25e-4945-a948-f6cefadb7f6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e6e70e5-a337-4343-980e-d0e7c89cf07b",
+   "id": "fc1293b8-3d0c-4b40-8144-7414c5b4af60",
    "metadata": {},
    "outputs": [],
    "source": []
