--- a/Lab 2/Lab-2-Daniel-Mehta.ipynb
+++ b/Lab 2/Lab-2-Daniel-Mehta.ipynb
@@ -129,17 +129,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "beeced72-37d6-4b6a-b636-44cf16aabbae",
+   "cell_type": "markdown",
+   "id": "ac432a95-e0ac-45c3-9edd-1981cfa167d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 4: Show that these two vectors are orthogonal v=(4,-2,3,5) and w = (-1,1,2,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fc1293b8-3d0c-4b40-8144-7414c5b4af60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot Product: 0\n",
+      "Therefore the two vectors are orthogonal\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([4,-2,3,5])\n",
+    "w = ([-1,1,2,0])\n",
+    "\n",
+    "dot_proudct = np.dot(v, w)\n",
+    "print(f\"Dot Product: {dot_proudct}\")\n",
+    "if dot_proudct == 0:\n",
+    "    print(f\"Therefore the two vectors are orthogonal\")\n",
+    "else:\n",
+    "    print(f\"Therefore the two vectors are NOT orthogonal\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc1293b8-3d0c-4b40-8144-7414c5b4af60",
+   "id": "a25820bc-295b-4990-a17e-dd89597042db",
    "metadata": {},
    "outputs": [],
    "source": []
