--- a/Lab 5/Lab-5-Daniel-Mehta.ipynb
+++ b/Lab 5/Lab-5-Daniel-Mehta.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "b27d3a54-8dab-4412-88a1-2dc99e37439b",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,7 @@
     "import matplotlib.pyplot as plt\n",
     "from itertools import permutations, combinations, combinations_with_replacement\n",
     "import math\n",
+    "from math import comb\n",
     "import sympy as sp"
    ]
   },
@@ -245,9 +246,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b9b646e-ea7b-45cf-9e7f-6f5db989a34d",
+   "metadata": {},
+   "source": [
+    "## Question 7\n",
+    "The entries in a 2 x 2 matrix are integers that are independently chosen for each entry. The\n",
+    "probability that the entry is odd is p. If the probability that the value of the determinant is even\n",
+    "is 0.5, find p."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7cfafeb3-3c7b-453f-8879-f61c29eee82f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of p: [0.707106781186548]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = sp.Symbol('p')\n",
+    "eq = p**4 - p**2 + 0.25\n",
+    "\n",
+    "solutions = sp.solve(eq, p)\n",
+    "\n",
+    "print(f\"Value of p: {valid_p}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62ac1c4d-75ae-4902-8d16-200242fb4d7c",
+   "metadata": {},
+   "source": [
+    "## Question 8\n",
+    "A drunker takes either a step forward or backward. The probability that he takes a forward step\n",
+    "is 0.4. Find the probability that at end of 11 steps he is 1 step away from the starting point?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a862ebb4-110a-48b9-8a23-4aaf7d897fa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability that the drunkard is 1 step away after 11 steps: 0.14714929152000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_f = 0.4 #step forward\n",
+    "p_b = 0.6 #step backwards\n",
+    "n = 11\n",
+    "k=6\n",
+    "probability = comb(n, k) * (p_f**k) * (p_b**(n - k))\n",
+    "\n",
+    "print(f\"Probability that the drunkard is 1 step away after 11 steps: {probability}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974ee142-0e5c-4f34-8b6c-956f7cbd52bd",
+   "id": "f53de121-795a-45e7-af5d-4008aaaa709d",
    "metadata": {},
    "outputs": [],
    "source": []
