--- a/Lab 5/Lab-5-Daniel-Mehta.ipynb
+++ b/Lab 5/Lab-5-Daniel-Mehta.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "a862ebb4-110a-48b9-8a23-4aaf7d897fa9",
    "metadata": {},
    "outputs": [
@@ -314,9 +314,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f562cefe-bd70-400d-8746-0a2c00aaefce",
+   "metadata": {},
+   "source": [
+    "## Question 9\n",
+    "A coin is twice as likely to land head as a tail in a series of independent tosses. Find the\n",
+    "probability that 3rd head occurs on the 5th toss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "fc8f06cd-8744-410a-b4ba-b6c473369908",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability that the 3rd head occurs on the 5th toss: 0.19753086419753085\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 2/3\n",
+    "q = 1 - p \n",
+    "n = 5\n",
+    "r = 3\n",
+    "probability = comb(n-1,r-1) * (p**r) * (q**(n-r))\n",
+    "print(f\"Probability that the 3rd head occurs on the 5th toss: {probability}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cba5b59-29b9-41a3-ad6b-3d43fa2e2c19",
+   "metadata": {},
+   "source": [
+    "## Question 10\n",
+    "An HIV test is 99% accurate (both ways). Only 0.3% of the population is HIV +. What is the\n",
+    "probability that a random person is HIV + given that the person tests +?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1bb833ec-cefc-4e9b-8856-628fb6dfd574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability that a person has HIV given they tested positive: 0.22952086553323028\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_H = 0.003\n",
+    "P_Hc = 1 - P_H\n",
+    "P_T_given_H = 0.99\n",
+    "P_T_given_Hc = 0.01\n",
+    "\n",
+    "P_T = (P_T_given_H*P_H) + (P_T_given_Hc*P_Hc)\n",
+    "P_H_given_T = (P_T_given_H*P_H) / P_T\n",
+    "\n",
+    "print(f\"Probability that a person has HIV given they tested positive: {P_H_given_T}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f53de121-795a-45e7-af5d-4008aaaa709d",
+   "id": "a22b67f2-3ebb-41bd-b8ba-75eb08c941d3",
    "metadata": {},
    "outputs": [],
    "source": []
