--- a/Lab 9/Lab 9 Daniel Mehta.ipynb
+++ b/Lab 9/Lab 9 Daniel Mehta.ipynb
@@ -98,9 +98,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1396f3d8-c5e8-464d-be79-2be42364aed2",
+   "metadata": {},
+   "source": [
+    "## Question 2: Interpretation of the Slope and Intercept\n",
+    "Using the simple regression model created in Question 1, explain the meaning of the slope and intercept\n",
+    "of the regression line. What do they represent in the context of this dataset?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e6accc9-0456-4d2a-9142-ebba47f5cf6e",
+   "metadata": {},
+   "source": [
+    "#### Intrepretation\n",
+    "\n",
+    "- **Intercept (25,000):** This is the predicted salary for an employee with **0 years of experience**. It suggests a starting salary of **$25,000** even with no experience.\n",
+    "\n",
+    "- **Slope (5,000):** This means that for **each additional year of experience**, the salary **increases by $5,000**.\n",
+    "\n",
+    "For example, if someone had 4 years of experience, there predicted salary would be:\n",
+    "\n",
+    "25,000 + (4 * 5,000) = 45,000\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "766e4f0c-9f81-45aa-979b-ca32aa56d7da",
+   "id": "8e35767a-f889-40d7-8858-ffc6bc320d46",
    "metadata": {},
    "outputs": [],
    "source": []
