--- a/Lab 9/Lab 9 Daniel Mehta.ipynb
+++ b/Lab 9/Lab 9 Daniel Mehta.ipynb
@@ -124,9 +124,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20704bf7-2a3a-41ba-8700-a05f5521c364",
+   "metadata": {},
+   "source": [
+    "## Question 3: Multiple Linear Regression\n",
+    "The dataset contains years_of_experience, education_level, and location as independent variables and salary as the dependent variable. Implement a multiple regression model and explain the relationship between these independent variables and salary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e35767a-f889-40d7-8858-ffc6bc320d46",
+   "id": "e85cdf10-4bef-46c4-ada1-57945ffd0d84",
    "metadata": {},
    "outputs": [],
    "source": []
